--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,17 @@
 [tox]
-envlist = py26, py27, py33, py34, py35, py36
+envlist = py26, py27, py33, py34, py35, py36, lint, pylint
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/pathgather
+    PYTHONPATH = {toxinidir}:{toxinidir}/pluralsight
 commands = python setup.py test
 
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+[testenv:pylint]
+deps = -r{toxinidir}/requirements_dev.txt
+        pylint
+
+commands = pylint -E --rcfile=./.pylintrc pluralsight/
+
+[testenv:lint]
+deps = -r{toxinidir}/requirements_dev.txt
+commands = flake8 --ignore=E402 --max-line-length=100 pluralsight/
