--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,7 +5,10 @@ flake8>=2.4.1
 tox>=2.1.1
 coverage>=4.0
 Sphinx>=1.3.1
-PyYAML==3.11
+PyYAML>=3.11
+
+coveralls
+requests
 requests-staticmock
 pytest
 pytest-runner
