--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python:
   - "2.7"
-  - "3.3"
   - "3.4"
   - "3.5"
   - "3.6"
@@ -17,5 +16,6 @@ matrix:
     include:
         - python: "2.7"
           script: "flake8 pathgather/ --max-line-length=90"
+
 after_success:
-  - coveralls
+  - codecov
