--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
 install: "pip install -r requirements_dev.txt"
 
 # command to run tests
-script: python setup.py test --cov=codecov
+script: py.test tests/ --cov=codecov
 
 matrix:
     include:
