--- a/tox.ini
+++ b/tox.ini
@@ -3,15 +3,15 @@ envlist = py27, py33, py34, py35, py36, lint, pylint
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/pluralsight
+    PYTHONPATH = {toxinidir}:{toxinidir}/pathgather
 commands = python setup.py test
 
 [testenv:pylint]
 deps = -r{toxinidir}/requirements_dev.txt
         pylint
 
-commands = pylint -E --rcfile=./.pylintrc pluralsight/
+commands = pylint -E --rcfile=./.pylintrc pathgather/
 
 [testenv:lint]
 deps = -r{toxinidir}/requirements_dev.txt
-commands = flake8 --ignore=E402 --max-line-length=100 pluralsight/
+commands = flake8 --ignore=E402 --max-line-length=100 pathgather/
