--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,15 @@
 [tox]
-envlist = py27, py33, py34, py35, py36, lint, pylint
+envlist = py27, py33, py34, py35, py36, bandit
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/pathgather
 commands = python setup.py test
 
-[testenv:pylint]
-deps = -r{toxinidir}/requirements_dev.txt
-        pylint
-
-commands = pylint -E --rcfile=./.pylintrc pathgather/
-
-[testenv:lint]
-deps = -r{toxinidir}/requirements_dev.txt
-commands = flake8 --ignore=E402 --max-line-length=100 pathgather/
+[testenv:bandit]
+basepython = python3
+skip_install = true
+deps =
+    bandit
+commands =
+    bandit -r pathgather/
